# hop-sdk-python

./: CHANGELOG.md  README.md  pyproject.toml  requirements-build.txt  requirements-ci.txt
.github/workflows/: release.yml  sync-back.yml
examples/: client.py  discovery.py  echo.py  raw_roundtrip.py  server.py  tcp.py
hop_endpoint/: __init__.py  _ffi.py  dev_tls.py  discovery.py  endpoint.py  tcp_bearer.py  wss_bearer.py
tests/: test_discovery.py  test_roundtrip.py
